--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^12.12.54",
     "@types/react": "^16.9.47",
     "@types/react-dom": "^16.9.8",
+    "bootstrap": "^4.5.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.3",
     "react-scripts": "3.4.3",
     "typescript": "^3.7.5"
   },
