--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dropzone-uploader": "^2.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "validator": "^13.1.17"
   },
   "scripts": {
     "start": "react-scripts start",
