--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "/altagram/",
   "private": true,
   "dependencies": {
+    "@ramonak/react-excel": "^1.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -20,7 +21,6 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-dropzone-uploader": "^2.11.0",
-    "react-file-viewer": "^1.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "typescript": "^3.7.5",
