--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-doc-viewer": "^0.1.5",
     "react-dom": "^16.13.1",
     "react-dropzone-uploader": "^2.11.0",
+    "react-json-view": "^1.20.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "typescript": "^3.7.5",
