--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mt-frontend",
   "version": "0.0.0",
-  "homepage": "/mt-frontend/0.0.0/",
+  "homepage": "/mt-frontend/D.E.V/",
   "private": true,
   "dependencies": {
     "@ramonak/react-excel": "^1.0.1",
