--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,7 +8,7 @@ image: node:10.15.3
 pipelines:
   default:
     - step:
-        name: Build and Test
+        name: Test
         caches:
           - node
         script:
@@ -16,6 +16,13 @@ pipelines:
           - npm test
   tags:
     release/*:
+      - step:
+          name: Test
+          caches:
+            - node
+          script:
+            - npm install
+            - npm test
       - step:
           name: Build release
           caches:
